# win-usb

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
docs/: architecture.md
include/winusb/: common.h  devnode.h  enumerate.h  json_emit.h  storage.h  topology.h
scripts/: build.ps1  ci.ps1  unit-test.ps1
scripts/hooks/: check_whitespace_eof.py  run_build.ps1  run_clang_format_check.ps1  run_clang_tidy.ps1  run_cmakelint.ps1  run_cppcheck.ps1  run_unit_tests.ps1
scripts/lib/: common.ps1  tooling.ps1
src/: common.c  devnode.c  enumerate.c  json_emit.c  main.c  storage.c  topology.c
tests/unit/: test_common.c  test_devnode.c  test_enumerate.c  test_helpers.h  test_json_emit.c  test_storage.c  test_topology.c
